--- a/index.html
+++ b/index.html
@@ -1,145 +1,142 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='utf-8'>
-<meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-<title>Alex Flores</title>
-<meta content='' name='description'>
-<meta content='width=device-width' name='viewport'>
-<script src='http://code.jquery.com/jquery-latest.min.js'></script>
-<link href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css' rel='stylesheet'>
-<link rel='stylesheet' media='screen' href='styles/main.min.css'>
-<link rel='stylesheet' href='styles/onepage-scroll.min.css'>
-<script src='scripts/jquery.onepage-scroll.min.js'></script>
-<script src='scripts/main.js'></script>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-12497311-5', 'alexflor.es');
-  ga('send', 'pageview');
-
-</script>
-
-<script type="text/javascript">var _kmq = _kmq || [];
-var _kmk = _kmk || '28bae0560ca19615fe1d1ac9d1e848360d8a4302';
-function _kms(u){
-  setTimeout(function(){
-    var d = document, f = d.getElementsByTagName('script')[0],
-    s = d.createElement('script');
-    s.type = 'text/javascript'; s.async = true; s.src = u;
-    f.parentNode.insertBefore(s, f);
-  }, 1);
-}
-_kms('//i.kissmetrics.com/i.js');
-_kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
-</script>
+  <meta charset='utf-8'>
+  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+  <title>Alex Flores</title>
+  <meta content='' name='description'>
+  <meta content='width=device-width' name='viewport'>
+  <script src='http://code.jquery.com/jquery-latest.min.js'></script>
+  <link href='http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css' rel='stylesheet'>
+  <link rel='stylesheet' href='styles/main.min.css'>
+  <link rel='stylesheet' href='styles/onepage-scroll.min.css'>
+  <script src='scripts/jquery.onepage-scroll.min.js'></script>
+  <script src='scripts/main.js'></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-12497311-5', 'alexflor.es');
+    ga('send', 'pageview');
+  </script>
+  <script>
+    var _kmq = _kmq || [];
+    var _kmk = _kmk || '28bae0560ca19615fe1d1ac9d1e848360d8a4302';
+    function _kms(u){
+      setTimeout(function(){
+        var d = document, f = d.getElementsByTagName('script')[0],
+        s = d.createElement('script');
+        s.type = 'text/javascript'; s.async = true; s.src = u;
+        f.parentNode.insertBefore(s, f);
+      }, 1);
+    }
+    _kms('//i.kissmetrics.com/i.js');
+    _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+  </script>
 </head>
 <body style='padding-top: 40px;'>
-<nav class='navbar navbar-inverse navbar-fixed-top '>
-<div class='row'>
-<h2 class='navbar-text col-sm-4 col-xs-12'>var <a class="me" href="mailto:me@alexflor.es">alexFlores</a> = new Portfolio</h2>
-<span class='navbar-text col-sm-7 text-right hidden-xs'>Things have been OK for <a class="me" href="mailto:me@alexflor.es">me</a> except that I'm a zombie now.</span>
-</div>
-</nav>
-<div class='main'>
-<section class='container page-4'>
-<div class='row'>
-<div class='container'>
-<div class='col-sm-6 col-xs-12 div'>
-<p class='desc'>Hi! I'm Alex. <br/> I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work. Scroll down to see some other stuff too.</p>
-<i class='fa fa-linkedin-square'>
-<a href='https://linkedin.com/in/alex2' target='_blank'>LinkedIn </a>
-</i>
-<br/>
-<i class='fa fa-check-square'>
-<a href='http://about.me/alexflores' target='_blank'>About.me </a>
-</i>
-<br/>
-<i class='fa fa-twitter-square'>
-<a href='https://twitter.com/4lex' target='_blank'>Twitter </a>
-</i>
-<br/>
-<i class='fa fa-tumblr-square'>
-<a href='http://blog.alexflor.es' target='_blank'>Tumblr </a>
-</i>
-<br/>
-<i class='fa fa-github-square'>
-<a href='https://github.com/audibleblink' target='_blank'>GitHub </a>
-</i>
-<br/>
-<br/>
-<br/>
-</div>
-<div class='col-sm-2'></div>
-<div class='col-sm-3 col-xs-12 img-container'>
-<img class='col-sm-12 col-xs-12' src='images/me.jpg' alt='me'>
-<div class='caption col-sm-12 col-xs-12'>
-This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and deployed on Amazon EC2 with Apache2
-</div>
-</div>
-</div>
-</div>
-</section>
-<section class='container page-1'>
-<div class='row'>
-<div class='container'>
-<div class='col-sm-5 col-xs-12 img-container'>
-<img class='col-sm-12 col-xs-12' src='images/jb1.jpg' alt='jailbird screenshot 1'>
-<div class='caption col-sm-12 col-xs-12'>
-Rails, jQueryUI, Postgresql, Heroku, Twilio and Google APIs, Devise, RSpec
-</div>
-</div>
-<div class='col-sm-1'></div>
-<p class='col-sm-6 desc col-xs-12'>Jailbird allows you to call a single phone number and access all of your Google contacts. No one remembers phone numbers any more and with Jailbird you can be connected to individuals or send voice recordings to a group of people you create. Tell your family 'It's a boy!' or your roommates that your car broke down...all with one call.
-<br>
-<br>
-<a class='btn-lg btn-info' href='https://github.com/mule-deer-2013/JailBirdApp'>GitHub</a>
-<a class='btn-lg btn-danger' href='http://jailbirdapp.com'>Demo</a>
-</p>
-</div>
-</div>
-</section>
-<section class='container page-3'>
-<div class='row'>
-<div class='container'>
-<p class='col-sm-6 desc col-xs-12'>A complete rebranding of a corporate site using Google Analytics to drive UI redesign. Average visit time increased 10-fold. Quote requests doubled.
-<br>
-<br>
-<a class='btn-lg btn-danger' href='http://domeprinting.com/'>Demo</a>
-</p>
-<div class='col-sm-1'></div>
-<div class='col-sm-5 col-xs-12 img-container'>
-<img class='col-sm-12 col-xs-12' src='images/dp1.jpg' alt='craigslist screenshot 1'>
-<div class='caption col-sm-12 col-xs-12'>
-Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro             
-</div>
-</div>
-</div>
-</div>
-</section>
-<section class='container page-2'>
-<div class='row'>
-<div class='container'>
-<div class='col-sm-5 col-xs-12 img-container'>
-<img class='col-sm-12 col-xs-12' src='images/dq1.jpg' alt='deqd screenshot 1'>
-<div class='caption col-sm-12 col-xs-12'>
-Sinatra, Postgresql, ActiveRecord, BCrypt
-</div>
-</div>
-<div class='col-sm-1'></div>
-<p class='col-sm-6 desc col-xs-12'>De.qd is flashcard app created as an introduction to Sinatra and CSS. The project goals were to practice agile development and group collaboration using Trello and git.  
-<br>
-<br>
-<a class='btn-lg btn-info' href='https://github.com/audibleblink/flashcardsv2'>GitHub</a>
-</p>
-</div>
-</div>
-</section>
-</div>
-<script> Portfolio.init()</script>
+  <nav class='navbar navbar-inverse navbar-fixed-top '>
+    <div class='row'>
+      <h2 class='navbar-text col-sm-4 col-xs-12'>var <a class="me" href="mailto:me@alexflor.es">alexFlores</a> = new Portfolio</h2>
+      <span class='navbar-text col-sm-7 text-right hidden-xs'>Things have been OK for <a class="me" href="mailto:me@alexflor.es">me</a> except that I'm a zombie now.</span>
+    </div>
+  </nav>
+  <div class='main'>
+    <section class='container page-4'>
+      <div class='row'>
+        <div class='container'>
+          <div class='col-sm-6 col-xs-12 div'>
+            <p class='desc'>Hi! I'm Alex. <br/> I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work. Scroll down to see some other stuff too.</p>
+            <i class='fa fa-linkedin-square'>
+              <a href='https://linkedin.com/in/alex2' target='_blank'>LinkedIn </a>
+            </i>
+            <br/>
+            <i class='fa fa-check-square'>
+              <a href='http://about.me/alexflores' target='_blank'>About.me </a>
+            </i>
+            <br/>
+            <i class='fa fa-twitter-square'>
+              <a href='https://twitter.com/4lex' target='_blank'>Twitter </a>
+            </i>
+            <br/>
+            <i class='fa fa-tumblr-square'>
+              <a href='http://blog.alexflor.es' target='_blank'>Tumblr </a>
+            </i>
+            <br/>
+            <i class='fa fa-github-square'>
+              <a href='https://github.com/audibleblink' target='_blank'>GitHub </a>
+            </i>
+            <br/>
+            <br/>
+            <br/>
+          </div>
+          <div class='col-sm-2'></div>
+          <div class='col-sm-3 col-xs-12 img-container'>
+            <img class='col-sm-12 col-xs-12' src='images/me.jpg' alt='me'>
+            <div class='caption col-sm-12 col-xs-12'>
+              This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and deployed on Amazon EC2 with Apache2
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class='container page-1'>
+      <div class='row'>
+        <div class='container'>
+          <div class='col-sm-5 col-xs-12 img-container'>
+            <img class='col-sm-12 col-xs-12' src='images/jb1.jpg' alt='jailbird screenshot 1'>
+            <div class='caption col-sm-12 col-xs-12'>
+              Rails, jQueryUI, Postgresql, Heroku, Twilio and Google APIs, Devise, RSpec
+            </div>
+          </div>
+          <div class='col-sm-1'></div>
+          <p class='col-sm-6 desc col-xs-12'>Jailbird allows you to call a single phone number and access all of your Google contacts. No one remembers phone numbers any more and with Jailbird you can be connected to individuals or send voice recordings to a group of people you create. Tell your family 'It's a boy!' or your roommates that your car broke down...all with one call.
+            <br>
+            <br>
+            <a class='btn-lg btn-info' href='https://github.com/mule-deer-2013/JailBirdApp'>GitHub</a>
+            <a class='btn-lg btn-danger' href='http://jailbirdapp.com'>Demo</a>
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class='container page-3'>
+      <div class='row'>
+        <div class='container'>
+          <p class='col-sm-6 desc col-xs-12'>A complete rebranding of a corporate site using Google Analytics to drive UI redesign. Average visit time increased 10-fold. Quote requests doubled.
+            <br>
+            <br>
+            <a class='btn-lg btn-danger' href='http://domeprinting.com/'>Demo</a>
+          </p>
+          <div class='col-sm-1'></div>
+          <div class='col-sm-5 col-xs-12 img-container'>
+            <img class='col-sm-12 col-xs-12' src='images/dp1.jpg' alt='craigslist screenshot 1'>
+            <div class='caption col-sm-12 col-xs-12'>
+              Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro             
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class='container page-2'>
+      <div class='row'>
+        <div class='container'>
+          <div class='col-sm-5 col-xs-12 img-container'>
+            <img class='col-sm-12 col-xs-12' src='images/dq1.jpg' alt='deqd screenshot 1'>
+            <div class='caption col-sm-12 col-xs-12'>
+              Sinatra, Postgresql, ActiveRecord, BCrypt
+            </div>
+          </div>
+          <div class='col-sm-1'></div>
+          <p class='col-sm-6 desc col-xs-12'>De.qd is flashcard app created as an introduction to Sinatra and CSS. The project goals were to practice agile development and group collaboration using Trello and git.  
+            <br>
+            <br>
+            <a class='btn-lg btn-info' href='https://github.com/audibleblink/flashcardsv2'>GitHub</a>
+          </p>
+        </div>
+      </div>
+    </section>
+  </div>
+  <script> Portfolio.init()</script>
 </body>
 </html>
