Edit caption description to reflect hosting change

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class='col-sm-3 col-xs-12 img-container'>
                         <img class='col-sm-12 col-xs-12' src='images/me.jpg' alt='me'>
                         <div class='caption col-sm-12 col-xs-12'>
-                            This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and deployed on Amazon EC2 with Apache2
+                            This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and <del>deployed on Amazon EC2 with Apache2</del> migrated to Github Pages)
                         </div>
                     </div>
                 </div>
