--- a/index.html
+++ b/index.html
@@ -13,21 +13,6 @@
     <link rel='stylesheet' href='styles/onepage-scroll.min.css'>
     <script src='scripts/jquery.onepage-scroll.min.js'></script>
     <script src='scripts/main.min.js'></script>
-    <script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-12497311-5', 'alexflor.es');
-    ga('send', 'pageview');
-    </script>
 
 <script type="text/javascript">
 
@@ -149,6 +134,16 @@
             </div>
         </section>
     </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-12497311-2', 'iwonthiscontest.com');
+  ga('send', 'pageview');
+
+</script>
     <script>
     Portfolio.init()
     </script>
