--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
@@ -13,24 +12,16 @@
     <link rel='stylesheet' href='styles/onepage-scroll.min.css'>
     <script src='scripts/jquery.onepage-scroll.min.js'></script>
     <script src='scripts/main.min.js'></script>
-
-<script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-12497311-5']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
-</script>
-
-
+    <script type='text/javascript'>var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-12497311-5']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </head>
-
 <body style='padding-top: 40px;'>
     <nav class='navbar navbar-inverse navbar-fixed-top '>
         <div class='row'>
@@ -43,27 +34,26 @@
             <div class='row'>
                 <div class='container'>
                     <div class='col-sm-6 col-xs-12 div'>
-                        <p class='desc'>Hi! I'm Alex.
-                            <br/>I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work. Scroll down to see some other stuff too.</p>
+                        <p class='desc'>Hi! I'm Alex. <br/> I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work. Scroll down to see some other stuff too.</p>
                         <i class='fa fa-linkedin-square'>
-<a href='https://linkedin.com/in/alex2' target='_blank'>LinkedIn </a>
-</i>
+                            <a href='https://linkedin.com/in/alex2' target='_blank'>LinkedIn </a>
+                        </i>
                         <br/>
                         <i class='fa fa-check-square'>
-<a href='http://about.me/alexflores' target='_blank'>About.me </a>
-</i>
+                            <a href='http://about.me/alexflores' target='_blank'>About.me </a>
+                        </i>
                         <br/>
                         <i class='fa fa-twitter-square'>
-<a href='https://twitter.com/4lex' target='_blank'>Twitter </a>
-</i>
+                            <a href='https://twitter.com/4lex' target='_blank'>Twitter </a>
+                        </i>
                         <br/>
                         <i class='fa fa-tumblr-square'>
-<a href='http://blog.alexflor.es' target='_blank'>Tumblr </a>
-</i>
+                            <a href='http://blog.alexflor.es' target='_blank'>Tumblr </a>
+                        </i>
                         <br/>
                         <i class='fa fa-github-square'>
-<a href='https://github.com/audibleblink' target='_blank'>GitHub </a>
-</i>
+                            <a href='https://github.com/audibleblink' target='_blank'>GitHub </a>
+                        </i>
                         <br/>
                         <br/>
                         <br/>
@@ -72,7 +62,7 @@
                     <div class='col-sm-3 col-xs-12 img-container'>
                         <img class='col-sm-12 col-xs-12' src='images/me.jpg' alt='me'>
                         <div class='caption col-sm-12 col-xs-12'>
-                            This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and <del>deployed on Amazon EC2 with Apache2</del> migrated to Github Pages.
+                            This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and deployed on Amazon EC2 with Apache2
                         </div>
                     </div>
                 </div>
@@ -109,7 +99,7 @@
                     <div class='col-sm-5 col-xs-12 img-container'>
                         <img class='col-sm-12 col-xs-12' src='images/dp1.jpg' alt='craigslist screenshot 1'>
                         <div class='caption col-sm-12 col-xs-12'>
-                            Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro
+                            Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro             
                         </div>
                     </div>
                 </div>
@@ -125,7 +115,7 @@
                         </div>
                     </div>
                     <div class='col-sm-1'></div>
-                    <p class='col-sm-6 desc col-xs-12'>De.qd is flashcard app created as an introduction to Sinatra and CSS. The project goals were to practice agile development and group collaboration using Trello and git.
+                    <p class='col-sm-6 desc col-xs-12'>De.qd is flashcard app created as an introduction to Sinatra and CSS. The project goals were to practice agile development and group collaboration using Trello and git.  
                         <br>
                         <br>
                         <a class='btn-lg btn-info' href='https://github.com/audibleblink/flashcardsv2'>GitHub</a>
@@ -134,19 +124,14 @@
             </div>
         </section>
     </div>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-12497311-2', 'iwonthiscontest.com');
-  ga('send', 'pageview');
-
-</script>
     <script>
-    Portfolio.init()
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-12497311-5', 'alexflor.es');
+        ga('send', 'pageview');
     </script>
+    <script> Portfolio.init()</script>
 </body>
-
 </html>
