--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="container">
             <div class="col-sm-6 col-xs-12 div">
               <p class="desc">
-                Hi! I'm Alex. <br /> I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work. Scroll down to see some other stuff too.
+                Hi! I'm Alex. <br /> I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work.
               </p>
               <i class="fa fa-linkedin-square"><a href="https://linkedin.com/in/alex2" target="_blank"> LinkedIn </a></i><br /><i class="fa fa-check-square"><a href="http://about.me/alexflores" target="_blank"> About.me </a></i><br /><i class="fa fa-twitter-square"><a href="https://twitter.com/4lex" target="_blank"> Twitter </a></i><br /><i class="fa fa-tumblr-square"><a href="http://blog.alexflor.es" target="_blank"> Tumblr </a></i><br /><i class="fa fa-github-square"><a href="https://github.com/audibleblink" target="_blank"> GitHub </a></i><br /><br /><br />
             </div>
@@ -39,12 +39,12 @@
             <div class="col-sm-3 col-xs-12 img-container">
               <img alt="me" class="col-sm-12 col-xs-12" src="images/me.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                This site was developed with Slim, Sass, Grunt, LiveReload, Bootstrap3 and deployed on Amazon EC2 with Apache2 
+                This site was developed with Slim, Sass, Gulp, Bootstrap and deployed on Amazon EC2 with Apache2 
               </div>
             </div>
           </div>
         </div>
-      </section>
+<!--       </section>
       <section class="container page-1">
         <div class="row">
           <div class="container">
@@ -92,7 +92,7 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-12497311-5', 'alexflor.es'); ga('send', 'pageview'); 
