update profile picture and caption

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="scripts/jquery.onepage-scroll.min.js"></script>
     <script src="scripts/main.js"></script>
     <script type="text/javascript">
-      var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-12497311-5']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })(); 
+      var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-12497311-5']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
     </script>
   </head>
   <body style="padding-top: 40px;">
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="row">
         <h2 class="navbar-text col-sm-4 col-xs-12">
-          var <a class="me" href="mailto:me@alexflor.es">alexFlores</a> = new Portfolio
+          let <a class="me" href="mailto:me@alexflor.es">alexFlores</a> = new Portfolio
         </h2>
         <span class="navbar-text col-sm-7 text-right hidden-xs">Things have been OK for <a class="me" href="mailto:me@alexflor.es">me</a> except that I'm a zombie now.</span>
       </div>
@@ -37,9 +37,9 @@
             </div>
             <div class="col-sm-2"></div>
             <div class="col-sm-3 col-xs-12 img-container">
-              <img alt="me" class="col-sm-12 col-xs-12" src="images/me.jpg" />
+              <img alt="me" class="col-sm-12 col-xs-12" src="images/me2.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                This site was developed with Slim, Sass, Gulp, Bootstrap and deployed on Amazon EC2 with Apache2 
+                SysAdmin turned developer with 10 years of troubleshooting and logical problem solving experience that I’d love to share with your company.
               </div>
             </div>
           </div>
@@ -51,7 +51,7 @@
             <div class="col-sm-5 col-xs-12 img-container">
               <img alt="jailbird screenshot 1" class="col-sm-12 col-xs-12" src="images/jb1.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                Rails, jQueryUI, Postgresql, Heroku, Twilio and Google APIs, Devise, RSpec 
+                Rails, jQueryUI, Postgresql, Heroku, Twilio and Google APIs, Devise, RSpec
               </div>
             </div>
             <div class="col-sm-1"></div>
@@ -71,7 +71,7 @@
             <div class="col-sm-5 col-xs-12 img-container">
               <img alt="craigslist screenshot 1" class="col-sm-12 col-xs-12" src="images/dp1.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro 
+                Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
             <div class="col-sm-5 col-xs-12 img-container">
               <img alt="deqd screenshot 1" class="col-sm-12 col-xs-12" src="images/dq1.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                Sinatra, Postgresql, ActiveRecord, BCrypt 
+                Sinatra, Postgresql, ActiveRecord, BCrypt
               </div>
             </div>
             <div class="col-sm-1"></div>
@@ -95,7 +95,7 @@
       </section> -->
     </div>
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-12497311-5', 'alexflor.es'); ga('send', 'pageview'); 
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-12497311-5', 'alexflor.es'); ga('send', 'pageview');
     </script>
     <script>
       Portfolio.init()
