add security blog

--- a/index.html
+++ b/index.html
@@ -31,68 +31,39 @@
           <div class="container">
             <div class="col-sm-6 col-xs-12 div">
               <p class="desc">
-                Hi! I'm Alex. <br /> I'm a Web Developer and SysAdmin. Here's where you can find out more about me and my work.
+                Hello
+                <br /> 
+                <br /> 
+                I'm a Software Developer, SysAdmin, Security Nerd, and avid Oxford Comma user
               </p>
-              <i class="fa fa-linkedin-square"><a href="https://linkedin.com/in/alex2" target="_blank"> LinkedIn </a></i><br /><i class="fa fa-check-square"><a href="http://about.me/alexflores" target="_blank"> About.me </a></i><br /><i class="fa fa-twitter-square"><a href="https://twitter.com/4lex" target="_blank"> Twitter </a></i><br /><i class="fa fa-tumblr-square"><a href="http://blog.alexflor.es" target="_blank"> Tumblr </a></i><br /><i class="fa fa-github-square"><a href="https://github.com/audibleblink" target="_blank"> GitHub </a></i><br /><br /><br />
+              <i class="fa fa-github-square">
+                <a href="https://github.com/audibleblink" target="_blank"> GitHub </a></i>
+              <br />
+              <i class="fa fa-check-square">
+                <a href="http://alexflor.es/security-blog" target="_blank"> Security Blog </a></i>
+              <br />
+              <i class="fa fa-tumblr-square">
+                <a href="http://blog.alexflor.es" target="_blank"> Tumblr </a></i>
+              <br />
+              <i class="fa fa-twitter-square">
+                <a href="https://twitter.com/4lex" target="_blank"> Twitter </a></i>
+              <br />
+              <i class="fa fa-linkedin-square">
+                <a href="https://linkedin.com/in/alex2" target="_blank"> LinkedIn </a></i>
+              <br />
+              <br />
+              <br />
             </div>
             <div class="col-sm-2"></div>
             <div class="col-sm-3 col-xs-12 img-container">
               <img alt="me" class="col-sm-12 col-xs-12" src="images/me2.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                SysAdmin turned developer with 10 years of troubleshooting and logical problem solving experience that I’d love to share with your company.
+                SysAdmin turned developer with 10+ years of troubleshooting and logical problem solving
+                experience. Currently interested in the Security industry.
               </div>
             </div>
           </div>
         </div>
-<!--       </section>
-      <section class="container page-1">
-        <div class="row">
-          <div class="container">
-            <div class="col-sm-5 col-xs-12 img-container">
-              <img alt="jailbird screenshot 1" class="col-sm-12 col-xs-12" src="images/jb1.jpg" />
-              <div class="caption col-sm-12 col-xs-12">
-                Rails, jQueryUI, Postgresql, Heroku, Twilio and Google APIs, Devise, RSpec
-              </div>
-            </div>
-            <div class="col-sm-1"></div>
-            <p class="col-sm-6 desc col-xs-12">
-              Jailbird allows you to call a single phone number and access all of your Google contacts. No one remembers phone numbers any more and with Jailbird you can be connected to individuals or send voice recordings to a group of people you create. Tell your family 'It's a boy!' or your roommates that your car broke down...all with one call. <br /><br /><a class="btn-lg btn-info" href="https://github.com/mule-deer-2013/JailBirdApp">GitHub</a><a class="btn-lg btn-danger" href="http://jailbirdapp.com">Demo</a>
-            </p>
-          </div>
-        </div>
-      </section>
-      <section class="container page-3">
-        <div class="row">
-          <div class="container">
-            <p class="col-sm-6 desc col-xs-12">
-              A complete rebranding of a corporate site using Google Analytics to drive UI redesign. Average visit time increased 10-fold. Quote requests doubled. <br /><br /><a class="btn-lg btn-danger" href="http://domeprinting.com/">Demo</a>
-            </p>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-5 col-xs-12 img-container">
-              <img alt="craigslist screenshot 1" class="col-sm-12 col-xs-12" src="images/dp1.jpg" />
-              <div class="caption col-sm-12 col-xs-12">
-                Joomla, Gantry, RokBox, MySQL, Google Analytics, Photoshop, Illustrator, Premier, Final Cut Pro
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="container page-2">
-        <div class="row">
-          <div class="container">
-            <div class="col-sm-5 col-xs-12 img-container">
-              <img alt="deqd screenshot 1" class="col-sm-12 col-xs-12" src="images/dq1.jpg" />
-              <div class="caption col-sm-12 col-xs-12">
-                Sinatra, Postgresql, ActiveRecord, BCrypt
-              </div>
-            </div>
-            <div class="col-sm-1"></div>
-            <p class="col-sm-6 desc col-xs-12">
-              De.qd is flashcard app created as an introduction to Sinatra and CSS. The project goals were to practice agile development and group collaboration using Trello and git. <br /><br /><a class="btn-lg btn-info" href="https://github.com/audibleblink/flashcardsv2">GitHub</a>
-            </p>
-          </div>
-        </div>
-      </section> -->
     </div>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-12497311-5', 'alexflor.es'); ga('send', 'pageview');
