--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
               <i class="fa fa-linkedin-square">
                 <a href="https://linkedin.com/in/alex2" target="_blank"> LinkedIn </a></i>
               <br />
+              <i class="fa fa-lock">
+                <a href="https://keybase.io/serveradmin/pgp_keys.asc" target="_blank"> Public Key </a></i>
+              <br />
               <br />
               <br />
             </div>
