--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="https://github.com/audibleblink" target="_blank"> GitHub </a></i>
               <br />
               <i class="fa fa-check-square">
-                <a href="http://alexflor.es/security-blog" target="_blank"> Security Blog </a></i>
+                <a href="http://sec.alexflor.es/" target="_blank"> Security Blog </a></i>
               <br />
               <i class="fa fa-tumblr-square">
                 <a href="http://blog.alexflor.es" target="_blank"> Tumblr </a></i>
@@ -61,8 +61,7 @@
             <div class="col-sm-3 col-xs-12 img-container">
               <img alt="me" class="col-sm-12 col-xs-12" src="images/me2.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                SysAdmin turned developer with 10+ years of troubleshooting and logical problem solving
-                experience. Currently interested in the Security industry.
+                SysAdmin turned developer. Now a Security Engineer at Jet.com.
               </div>
             </div>
           </div>
