update new career

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="row">
         <h2 class="navbar-text col-sm-4 col-xs-12">
-          let <a class="me" href="mailto:me@alexflor.es">alexFlores</a> = new Portfolio
+          echo <a class="me" href="mailto:me@alexflor.es">alexFlores</a>  | wall
         </h2>
         <span class="navbar-text col-sm-7 text-right hidden-xs">Things have been OK for <a class="me" href="mailto:me@alexflor.es">me</a> except that I'm a zombie now.</span>
       </div>
@@ -31,19 +31,19 @@
           <div class="container">
             <div class="col-sm-6 col-xs-12 div">
               <p class="desc">
-                Hello
-                <br /> 
-                <br /> 
-                I'm a Software Developer, SysAdmin, Security Nerd, and avid Oxford Comma user
+                Recovering Sysadmin and Software Developer. 
+              </p>
+              <p class="desc">
+                Red-Teamer.<a href="https://en.wikipedia.org/wiki/Red_team"> <i class="fa fa-question-circle"></i> </a>
+              </p>
+              <p class="desc">
+                Still an avid Oxford Comma user.
               </p>
               <i class="fa fa-github-square">
                 <a href="https://github.com/audibleblink" target="_blank"> GitHub </a></i>
               <br />
               <i class="fa fa-check-square">
                 <a href="http://sec.alexflor.es/" target="_blank"> Security Blog </a></i>
-              <br />
-              <i class="fa fa-tumblr-square">
-                <a href="http://blog.alexflor.es" target="_blank"> Tumblr </a></i>
               <br />
               <i class="fa fa-twitter-square">
                 <a href="https://twitter.com/4lex" target="_blank"> Twitter </a></i>
@@ -61,7 +61,7 @@
             <div class="col-sm-3 col-xs-12 img-container">
               <img alt="me" class="col-sm-12 col-xs-12" src="images/me2.jpg" />
               <div class="caption col-sm-12 col-xs-12">
-                SysAdmin turned developer. Now a Security Engineer at Jet.com.
+                Currently running Adversary Simulations for Fortune 1.
               </div>
             </div>
           </div>
