--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           <div class="container">
             <div class="col-sm-6 col-xs-12 div">
               <p class="desc">
-                Recovering Sysadmin and Software Developer. 
+                Recovering Sysadmin and Software Dev. 
               </p>
               <p class="desc">
-                Red-Teamer.<a href="https://en.wikipedia.org/wiki/Red_team"> <i class="fa fa-question-circle"></i> </a>
+                Red Teamer.<a href="https://en.wikipedia.org/wiki/Red_team"> <i class="fa fa-question-circle"></i> </a>
               </p>
               <p class="desc">
                 Still an avid Oxford Comma user.
@@ -43,7 +43,7 @@
                 <a href="https://github.com/audibleblink" target="_blank"> GitHub </a></i>
               <br />
               <i class="fa fa-check-square">
-                <a href="http://sec.alexflor.es/" target="_blank"> Security Blog </a></i>
+                <a href="https://ctrl.red/" target="_blank"> Security Blog </a></i>
               <br />
               <i class="fa fa-twitter-square">
                 <a href="https://twitter.com/4lex" target="_blank"> Twitter </a></i>
